# ShakeToFindCursor

./: .gitignore  CMakeLists.txt  LICENSE  ShakeToFindCursor.rc  main.cpp  readme.md  res.rc  resource.h
.github/workflows/: build.yml
